--- a/src/themes/preset/index.less
+++ b/src/themes/preset/index.less
@@ -4,6 +4,7 @@ body {
       height: 100%;
       overflow-y: hidden;
       background-color: @color_background;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
       -webkit-font-smoothing: antialiased;
       scroll-behavior: smooth;
 }
