--- a/src/themes/skins/default.less
+++ b/src/themes/skins/default.less
@@ -1,7 +1,16 @@
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
 :root {
-      --primary-color: black;
+      --hover-color: #eee;
+      --primary-color: #1890ff;
+      --secondary-color: #1f6db6;
+
+      --transition-ease-in: all 0.3s ease-out;
+      --transition-ease-out: all 0.3s ease-out;
+
+      --color_background: #f8f9fd;
+      --color_unimportant_2: #ddd;
+      --radius_normal: 6px;
 }
 
 @border-radius-base: 6px;
@@ -15,7 +24,7 @@
 @warning-color: #faad14;
 @error-color: #f5222d;
 @text-color: #000;
-@hover-color: #eee;
+@hover-color: var(--hover-color);
 @primary-color: var(--primary-color);
 @table-row-hover-bg: white;
 
@@ -23,20 +32,20 @@
 @purple: #d897eb;
 @shadow-1: 4px 4px 20px 0 rgba(0, 0, 0, 0.01);
 @shadow-2: 4px 4px 40px 0 rgba(0, 0, 0, 0.05);
-@transition-ease-in: all 0.3s ease-out;
-@transition-ease-out: all 0.3s ease-out;
+@transition-ease-in: var(--transition-ease-in);
+@transition-ease-out: var(--transition-ease-out);
 @ease-in: ease-in;
 
 //custom
-@secondary-color: #1f6db6;
-@color_background: #f8f9fd;
+@secondary-color: var(--secondary-color);
+@color_background: var(--color_background);
 @color_border_section: #d4dadf;
 @color_border_light: #eeeeee;
 @color_border_divide: whitesmoke;
 @color_unimportant_1: #aaa;
 @color_unimportant_2: #ddd;
 @color_danger: #F44336;
-@radius_normal: 6px;
+@radius_normal: var(--radius_normal);
 
 @box_shadow_section: 0 3px 8px 0 rgba(116, 129, 141, 0.1);
 @box_shadow_unit: 0px 0px 30px rgb(212, 168, 168);
