--- a/src/layouts/components/Container/index.less
+++ b/src/layouts/components/Container/index.less
@@ -1,5 +1,5 @@
 .content {
-      padding: 24px 0;
+      padding-top: 72px;
       padding-bottom: 40px;
       min-height: ~'calc(100% - 72px)';
       transition: all ease 0.3s;
